# qgis-python-compiler

./: pyproject.toml
.github/workflows/: build-wheels.yml  compile-script.yml
